--- a/src/main/webapp/i18n/en/device.json
+++ b/src/main/webapp/i18n/en/device.json
@@ -18,21 +18,21 @@
         "title": "Device"
       },
       "id": "ID",
-      "mac": "Mac",
+      "mac": "MAC-Address",
       "inventoryNumber": "Inventory Number",
       "location": "Location",
       "hostname": "Hostname",
       "webLogin": "Web Login",
       "webPassword": "Web Password",
-      "dhcpEnabled": "Dhcp Enabled",
-      "ipAddress": "Ip Address",
+      "dhcpEnabled": "DHCP Enabled",
+      "ipAddress": "IP-Address",
       "subnetMask": "Subnet Mask",
-      "defaultGw": "Default Gw",
-      "dns1": "Dns 1",
-      "dns2": "Dns 2",
+      "defaultGw": "Default Gateway",
+      "dns1": "DNS 1",
+      "dns2": "DNS 2",
       "provisioningMode": "Provisioning Mode",
-      "provisioningUrl": "Provisioning Url",
-      "ntpServer": "Ntp Server",
+      "provisioningUrl": "Provisioning URL",
+      "ntpServer": "NTP Server",
       "notes": "Notes",
       "configuration": "Configuration",
       "settings": "Settings",
@@ -40,7 +40,13 @@
       "children": "Children",
       "model": "Model",
       "responsiblePerson": "Responsible Person",
-      "parent": "Parent"
+      "parent": "Parent",
+      "validation": {
+        "macPattern": "MAC-address should be in 'AA-BB-CC-DD-EE-FF' or 'AA:BB:CC:DD:EE:FF' format",
+        "ipAddressPattern": "You provided wrong IP-address",
+        "subnetMaskPattern": "You provided wrong subnet mask",
+        "domainNamePattern": "You provided wrong domain name"
+      }
     }
   }
 }
