--- a/src/main/webapp/i18n/en/deviceType.json
+++ b/src/main/webapp/i18n/en/deviceType.json
@@ -2,11 +2,11 @@
   "voipadminApp": {
     "DeviceType": {
       "null": "",
-      "IPPHONE": "IPPHONE",
-      "IPGATEWAY": "IPGATEWAY",
-      "HANDSET": "HANDSET",
-      "HEADSET": "HEADSET",
-      "OTHER": "OTHER"
+      "IPPHONE": "IP-Phone",
+      "IPGATEWAY": "VoIP-Gateway",
+      "HANDSET": "Handset",
+      "HEADSET": "Headset",
+      "OTHER": "Other"
     }
   }
 }
