--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -104,6 +104,7 @@
       "addimage": "Add image",
       "back": "Back",
       "cancel": "Cancel",
+      "change": "Change",
       "delete": "Delete",
       "edit": "Edit",
       "open": "Open",
