Customized options tab of device model create/update page. Closes #8

--- a/src/main/webapp/i18n/en/deviceModel.json
+++ b/src/main/webapp/i18n/en/deviceModel.json
@@ -14,6 +14,10 @@
       "delete": {
         "question": "Are you sure you want to delete Device Model {{ id }}?"
       },
+      "vendorChange": {
+        "question": "Are you sure you want to change this model's vendor? This will erase available options list.",
+        "title": "Confirm Vendor Changing"
+      },
       "detail": {
         "title": "Device Model"
       },
