Customized additional settings tab of device create/update page. Closes #6

--- a/src/main/webapp/i18n/en/setting.json
+++ b/src/main/webapp/i18n/en/setting.json
@@ -21,7 +21,11 @@
       "textValue": "Text Value",
       "option": "Option",
       "selectedValues": "Selected Values",
-      "device": "Device"
+      "device": "Device",
+      "action": {
+        "addNew": "Set option",
+        "setAnother": "Set another option"
+      }
     }
   }
 }
