Mostly translated to russian language. Closes #18

--- a/src/main/webapp/i18n/en/device.json
+++ b/src/main/webapp/i18n/en/device.json
@@ -21,6 +21,11 @@
       "detail": {
         "title": "Device"
       },
+      "tabs": {
+        "general": "General settings",
+        "line": "Line settings",
+        "additional": "Additional settings"
+      },
       "id": "ID",
       "mac": "MAC-Address",
       "inventoryNumber": "Inventory Number",
