--- a/src/main/webapp/i18n/ru/global.json
+++ b/src/main/webapp/i18n/ru/global.json
@@ -7,17 +7,17 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Сущности",
-        "device": "Device",
-        "deviceModel": "Device Model",
-        "otherDeviceType": "Other Device Type",
-        "responsiblePerson": "Responsible Person",
-        "department": "Department",
-        "voipAccount": "Voip Account",
-        "asteriskAccount": "Asterisk Account",
-        "setting": "Setting",
-        "option": "Option",
-        "optionValue": "Option Value",
-        "vendor": "Vendor",
+        "device": "Устройства",
+        "deviceModel": "Модели устройств",
+        "otherDeviceType": "Иные типы устройств",
+        "responsiblePerson": "Ответственные лица",
+        "department": "Подразделения",
+        "voipAccount": "VoIP-аккаунты",
+        "asteriskAccount": "Аккаунты Asterisk",
+        "setting": "Настройки устройств",
+        "option": "Опции",
+        "optionValue": "Значения для опций",
+        "vendor": "Производители",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
