Added possible values control field in option create/update page. Closes #25

--- a/src/main/webapp/i18n/en/option.json
+++ b/src/main/webapp/i18n/en/option.json
@@ -17,6 +17,7 @@
       "detail": {
         "title": "Option"
       },
+      "add": "Add possible value",
       "id": "ID",
       "code": "Code",
       "descr": "Descr",
