--- a/src/main/webapp/i18n/ru/option.json
+++ b/src/main/webapp/i18n/ru/option.json
@@ -17,6 +17,7 @@
       "detail": {
         "title": "Опция"
       },
+      "add": "Добавить возможное значение",
       "id": "ID",
       "code": "Код",
       "descr": "Описание",
