--- a/src/main/webapp/i18n/en/optionValueType.json
+++ b/src/main/webapp/i18n/en/optionValueType.json
@@ -2,8 +2,8 @@
   "voipadminApp": {
     "OptionValueType": {
       "null": "",
-      "TEXT": "TEXT",
-      "SELECT": "SELECT"
+      "TEXT": "Text",
+      "SELECT": "Selectable"
     }
   }
 }
