Removed JHipster mentions from homepage. Closes #22

--- a/src/main/webapp/i18n/ru/global.json
+++ b/src/main/webapp/i18n/ru/global.json
@@ -147,5 +147,6 @@
       "not.image": "Файл должен был быть изображением, но было установлено, что \"{{ fileType }}\""
     }
   },
-  "footer": "Это ваш футтер"
+  "footer": "Это ваш футтер",
+  "author": "Солодков Сергей"
 }
